Fix layout HQ left panel: KP-7231 HQ\SP: Side pane overlaps lists area

--- a/src/Core/SharedKernels/SurveyManagement/SurveyManagement.Web/Content/app.css
+++ b/src/Core/SharedKernels/SurveyManagement/SurveyManagement.Web/Content/app.css
@@ -58,7 +58,6 @@ input::-ms-clear {
         overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
         background-color: #f5f5f5;
         border-right: 1px solid #eee;
-        min-width: 233px;
     }
 
         .sidebar.pull-right {
